[package]
name = "reputation_dao"
version = "0.1.0"
description = "Advanced Reputation Scoreboard DAO for Codigo DevQuest"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0" 